fix label alignment on safari

--- a/react_app_2/front_end/src/components/label-input/label-input.scss
+++ b/react_app_2/front_end/src/components/label-input/label-input.scss
@@ -35,6 +35,7 @@
   display: grid;
   grid-template-columns: 1fr 32px;
   align-items: center;
+  align-content: center;
 }
 
 .labels-input__label-remove {
